--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+"postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~6.1.5",
+    "@angular/compiler-cli": "^6.1.0",
     "@angular/animations": "^6.1.0",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
